# vega

./: .gitignore  README.md  package-lock.json  package.json
apps/api/: main.py  render.yaml  requirements.txt  setup.py  test_data.csv
apps/api/app/api/v1/: health.py  router.py
apps/api/app/core/: config.py  database.py  middleware.py  supabase.py
apps/api/app/services/: csv_importer.py  location_features.py  valuation_engine.py
apps/api/apps/api/: pyproject.toml
apps/web/: next.config.ts  package.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/ai/: page.tsx
apps/web/src/app/analysis/: page.tsx
apps/web/src/app/bina-karsilastirma/: page.tsx
apps/web/src/app/command-center/: page.tsx
apps/web/src/app/dashboard/: page . tsx  page.tsx
apps/web/src/app/emsal/: page.tsx
apps/web/src/app/feature-training/: page.tsx
apps/web/src/app/listings/: page.tsx
apps/web/src/app/map/: page.tsx
apps/web/src/app/market-pulse/: page.tsx
apps/web/src/app/opportunities/: page.tsx
apps/web/src/app/report/: page.tsx
apps/web/src/app/sozlesme/: page.tsx
apps/web/src/app/valuation/: page.tsx
apps/web/src/app/zone-scores/: page.tsx
apps/web/src/components/command-center/: CommandCenterContext.tsx  ConstraintEngine.tsx  DataConsole.tsx  DataIntake.tsx  FailureAnalysis.tsx  MemoryGraph.tsx  StrategyExperiments.tsx
apps/web/src/hooks/: useAgencyId.ts
apps/web/src/lib/: analysisEngine.ts  api.ts  commandCenterStore.ts  commandCenterTypes.ts  featureTraining.ts
scripts/: deploy-vega.sh
(+11 files in other folders)
