[tool.poetry]
name = "vega-api"
version = "0.1.0"
description = "VEGA Real Estate Intelligence API"
authors = ["VEGA"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.135.1"
uvicorn = "0.42.0"
python-dotenv = "1.2.2"
h3 = "4.4.2"
shapely = "2.1.2"
psycopg2-binary = "2.9.11"
httpx = "0.28.1"
pydantic = "2.12.5"
pydantic-settings = "^2.0.0"
websockets = "16.0"
pyjwt = "2.12.1"
python-multipart = "0.0.22"
postgrest = "2.28.2"
realtime = "2.28.2"
storage3 = "0.7.7"
supabase-auth = "2.28.2"
supabase-functions = "2.28.2"
supabase = "2.28.2"
yarl = "1.23.0"
numpy = "2.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
